...
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 16),
            child: Align(
              alignment: AlignmentDirectional.centerStart,
              child: Text(
                '${filtered.length} '
                '${filtered.length == 1 ? 'screen' : 'screens'}',
                style: theme.textTheme.labelMedium,
              ),
            ),
          ),
          const Divider(height: 16),
          Expanded(
...
